z-index fix

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1799,7 +1799,7 @@ ul.main {
 
 /*header*/
 #group2 { 
-    z-index: 1; 
+    z-index: 5; 
     padding-top:0px;
     height: 550px;
 }
